--- a/app/views/shared/home/_tabs.html.erb
+++ b/app/views/shared/home/_tabs.html.erb
@@ -20,7 +20,9 @@
 <li>
 <%= link_to_if( not_in_context("artists", nil, "index"), "ARTISTS", { :controller => "artists" }) %>
   </li>
-
+<li>
+  <a href="http://forwind.bandcamp.com">SHOP</a>
+</li>
   <li>
 <%= link_to_if(not_in_context("podcasts", nil, "index"), "PODCASTS", { :controller => 'podcasts', :action => 'index'}) %>
     <ol>
