add youtube to our sociallinks

--- a/app/views/layouts/music.html.erb
+++ b/app/views/layouts/music.html.erb
@@ -25,10 +25,11 @@
 							<div id="footer-links">
 						<div id="socialLinks">
 							<ul>
+              <li><a href="https://www.youtube.com/channel/UC7KlAGrDB_X5BxX4HrRsXHA" title="Visit our Youtube" target="_blank"><img src='/images/index/youtube-24x24.png'></a></li>
 							<li><a href="http://soundcloud.com/forwind" title="Visit our SoundCloud page" target="_blank"><img src='/images/index/soundcloud-24x24.png'></a></li>
 							<li><a href="http://twitter.com/#!/forwindings" title="View our tweets" target="_blank"><img src='/images/index/twitter-24x24.png'></a></li>
 							<li><a href="http://www.facebook.com/pages/Forwind/143631062329300" title="Visit our Facebook page" target="_blank"><img src='/images/index/facebook-24x24.png'></a></li>
-							<li><a href="http://www.mixcloud.com/Forwind/" title="Visit our Vimeo page" target="_blank"><img src="/images/index/mixcloud.png" alt="Mixcloud" /></a></li>
+							<li><a href="http://www.mixcloud.com/Forwind/" title="Visit our Mixcloud page" target="_blank"><img src="/images/index/mixcloud.png" alt="Mixcloud" /></a></li>
 						<ul>
 						</div>
 					</div>
