--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,11 +3,10 @@
 <div id="container_2grid_left">
 
 	<img src=<%= File.join(@s3_images, "artists", @artist.image) %>>
-		<div class="p_contentSpacer">
-		</div>
-		<p>
+		<br/><br/>
+		<div class="artist_desc">
 		<%= @artist.description.html_safe %>
-		</p>
+		</div>
 </div>
 
 
