--- a/app/assets/stylesheets/blog_kit.css
+++ b/app/assets/stylesheets/blog_kit.css
@@ -33,9 +33,11 @@ h1.blogPostTitle {
 .blogPostBody {
 	padding: 10px 20px 20px 0px;
 	width: 500px;
-  font-size: .875em;
+  font-size: .975em;
+  color: #b9bcbe;
 	float: left;
 	line-height: 1.5em;
+	text-align: justify;
 }
 
 .blogPoster {
