--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,7 @@
 <div id="content_container">
 
 <div id="container_2grid_left">
-<p>
+<p class="about">
 Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.
 <br/><br/>
 We're not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.
