this is the last time banner images are updated via the repo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="/releases/fwd14"><img src=<%= File.join(@s3_images, "index", "fwd14_banner_alt1.png")%>></a>
+<a href="/releases/fwd15"><img src=<%= File.join(@s3_images, "index", "fwd15_banner_net.png")%>></a>
 
 <p></p>
 </div>
