add contact point

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,7 +8,18 @@
 <title>FORWIND &bull; An independent publishing label </title>
 <meta name="description" content="An independent music publishing label born 2009. " />
 <meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "url": "http://www.forwind.net",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "email": "webquery@forwind.net",
+    "contactType": "Enquiries"
+  }]
+}
+</script>
 <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
 <script src="http://code.jquery.com/jquery-1.7.min.js"></script>
 <script src="/javascripts/jquery.sharrre-1.3.4.min.js"></script>
