use url not email for contact point

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -15,7 +15,7 @@
   "url": "http://www.forwind.net",
   "contactPoint": [{
     "@type": "ContactPoint",
-    "email": "webquery@forwind.net",
+    "url": "http://www.forwind.net/about",
     "contactType": "Enquiries"
   }]
 }
