--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -13,10 +13,20 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "url": "http://www.forwind.net",
+  "name": "Forwind Publishing",
+  "description" : "An independent publishing label established in 2009",
   "contactPoint": [{
     "@type": "ContactPoint",
     "url": "http://www.forwind.net/about",
-    "contactType": "Enquiries"
+    "contactType": "pr enquiries",
+    "email" : "webquery@forwind.net"
+  }],
+  "department": [{
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "url": "http://www.forwind.net/releases",
+    "name": "Forwind Releases",
+    "description" : "Browse our full catalogue of releases"
   }]
 }
 </script>
