use redis to store list of artists and releases for their index pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ body {
  margin: 10px 0;
  font-size: 0.8125em;
  line-height: 1.5;
- font-family: "ARIAL";
+ font-family: "Times New Roman";
  background: #232122;
 }
 
