use redis to set the index banner image and link, i.e. let's try to cut down on deployments.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
 <div id="content_container">
-
 <div id="home_promo_header">
 
-<a href="/releases/fwd15"><img src=<%= File.join(@s3_images, "index", "fwd15_banner_net.png")%>></a>
+<%=raw banner() %>
 
 <p></p>
 </div>
