recent releases to featured releases

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 <section id="container_2grid_left">
 <div class="title-hr-2gridleft">
 <hr/>
-<h2>Recent Releases</h2>
+<h2>Featured Releases</h2>
 <hr/>
 </div>
 
